// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-background-image"
    src="[object Object]"
  />
</DocumentFragment>
`;

exports[`allows passing in a single string as the image src 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-background-image"
    src="/assets/images/pfbg_1200.jpg"
  />
</DocumentFragment>
`;
